<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Google -->
    <string name="google" translatable="false">Google</string>

    <!-- Strings de uso geral -->
    <string-array name="activities_array">
        <item>Main Activity</item>
        <item>Auxiliar Activity</item>
        <item>File Activity</item>
    </string-array>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Are you sure?</string>
    <string name="error">Error!</string>
    <string name="success">Success!</string>
    <string name="success_long">Operation succeed!</string>
    <string name="path">Path</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="options">Options</string>
    <string name="confirm">Confirm</string>
	<string name="close">Close</string>

    <!-- MainActivity -->
    <string name="app_name">Test</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="ntf_text">Create notification</string>
    <string name="title_activity_test">Notifications</string>
    <string name="google_btn_text">Google Search</string>
    <string name="lucky_btn">I\'m felling lucky!</string>
    <string name="auxiliar_activity">Open auxiliar Activity</string>
    <string name="notif_title">Notification title</string>
    <string name="notif_text">Notification text</string>
    <string name="notification">Notification</string>
    <string name="notif_test">Test notification</string>
    <string name="browse_web">Browse Web</string>
    <string name="battery_info">Battery info</string>

    <!-- AuxiliarActivity -->
    <string name="title_activity_aux">Auxiliar Activity</string>
    <string name="pick_contact">Select contact</string>
    <string name="contact_phone">Phone:</string>
    <string name="share_text">Share text</string>
    <string name="shared_text">Shared text</string>
    <string name="share">Share</string>
    <string name="reboot_phone">Reboot phone</string>
    <string name="prompt_reboot_phone">Do you want to reboot your phone?</string>
    <string name="item_reboot_system">Reboot system</string>
    <string name="item_reboot_recovery">Reboot recovery</string>
    <string name="item_reboot_bootloader">Reboot bootloader</string>
    <string name="item_hot_reboot">Hot Reboot</string>
    <string name="item_reboot_download">Reboot download</string>
    <string name="list_add_item">Add Item</string>
    <string name="list_remove_item">Remove Item</string>
    <string name="list_item_edit">Edit item</string>
    <string name="list_title">ListView Options</string>
    <string name="sure_remove_item">Are you sure you want to remove this item?</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item description</string>
    <string name="item_id">Item ID</string>
    <string name="item_index">Item Index</string>

    <!-- TestActivity -->
    <string name="ntf_working">Notifications working!</string>

    <!-- FileActivity -->
    <string name="title_activity_file">File manipulation</string>
    <string name="file_name_hint">File name</string>
    <string name="file_content_hint">File content</string>
    <string name="btn_save_file_text">Save</string>
    <string name="btn_clear_fields_text">Clear</string>
    <string name="files">Files</string>
    <string name="choose_created_file">Choose created file</string>
    <string name="file_successfully_created">File created</string>
    <string name="file_error_empty_fields">There are empty fields!</string>
	<string name="save_to_file">Save to file</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="reboot_download_chbx_summary">If checked, \'Reboot download\' will be used instead of \'Reboot bootloader\' in reboot options</string>
    <string name="reboot_download_chbx_title">Use \'Reboot download\'</string>
    <string name="chk_link_title">Use link below</string>
    <string name="text_link_title">Link</string>
    <string name="pref_title_open_google">Open Google</string>
    <string name="app_font">Application font type</string>

    <!-- Notifications settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_use_led_title">Use LED</string>
    <string name="pref_use_led_summary_true">Notifications light ON</string>
    <string name="pref_use_led_summary_false">Notifications light OFF</string>
    <string name="pref_notif_led_color">LED color</string>

    <string-array name="pref_notif_led_color_name">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>

    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_vibrate_summary_true">Vibration ON</string>
    <string name="pref_vibrate_summary_false">Vibration OFF</string>
    <string name="pref_vibration_duration_title">Vibration duration</string>
    <string name="pref_vibration_duration_summary">Set the device vibration period for the notitication</string>
	<string name="about">About</string>

</resources>
