<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@android:style/Theme.Holo.Light.NoActionBar.TranslucentDecor"
    tools:context=".FileActivity" >

    <EditText
        android:id="@+id/editFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/file_name_hint"
	    android:textSize="20dp"
	    android:inputType="textCapWords">

        <requestFocus />
    </EditText>

	<Space
		android:id="@+id/file_space"
		android:layout_width="fill_parent"
		android:layout_height="20dp"
		android:layout_below="@+id/editFileName"/>

    <EditText
        android:id="@+id/editFileContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/file_space"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/file_content_hint"/>

    <Button
        android:id="@+id/btnSaveFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/btnClearFields"
        android:onClick="createFile"
        android:text="@string/btn_save_file_text" />

    <Button
        android:id="@+id/btnClearFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSaveFile"
        android:layout_alignBottom="@+id/btnSaveFile"
        android:layout_alignLeft="@+id/editFileContent"
        android:onClick="clearFields"
        android:text="@string/btn_clear_fields_text" />

    <Button
        android:id="@+id/btnChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnClearFields"
        android:layout_below="@+id/btnClearFields"
        android:onClick="callChooseCreatedFile"
        android:text="@string/choose_created_file" />

</RelativeLayout>
