<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aplicativo.app.ShowSharedTextActivity">

    <TextView
	    android:id="@+id/shared_text"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="0dp"
		android:text="@string/save_to_file"
		android:id="@+id/save_button"
		android:layout_alignTop="@+id/close_button"
		android:onClick="saveToFile"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="0dp"
		android:text="@string/close"
		android:id="@+id/close_button"
		android:layout_below="@+id/shared_text"
		android:layout_marginTop="30dp"
		android:layout_toRightOf="@+id/save_button"
		android:onClick="killActivity"/>

</RelativeLayout>
